Creating rooms done

--- a/Scrum Poker.csproj
+++ b/Scrum Poker.csproj
@@ -133,6 +133,9 @@
     <None Include="Connected Services\ServiceReference1\service1.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Connected Services\ServiceReference1\SPWPF.ServiceReference1.RoomDTO.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\ServiceReference1\SPWPF.ServiceReference1.UserDTO.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
